# icgem_tools

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
data/: README.md
docs/: README.md
examples/: __init__.py  read_icgem_example.py  write_icgem_example.py
src/icgem_tools/: __init__.py  coeffs.py  grids.py  points.py
